--- a/vignettes/Week4_Selection/Week4_vignette.Rmd
+++ b/vignettes/Week4_Selection/Week4_vignette.Rmd
@@ -54,8 +54,9 @@ require(here)
 require(LandGenCourse)
 require(lme4)
 require(car)
-#require(EcoGenetics)
+require(EcoGenetics)
 require(tibble)
+require(vegan)
 
 source(paste0(here(),"/data/supplemental_R_functions.R"))
 
@@ -155,6 +156,55 @@ head(mod3_all_eff)
 
 The values held in the object mod3_all_eff are now the genetic effects of each maternal tree. In other words, this is the phenotypic trait value for the maternal tree for $δ^{13}C$. Note that we did not measure the maternal tree, but inferred her phenotype from her offspring in a common environment.
 
+### e) Combine trait, genotypic and environmental data
+
+Now that we have an estimate of the trait for each family (i.e., mother tree), we can add it to the dataset to facilitate their joint analysis.
+
+The 'EcoGenetics' package facilitates the joint storing and spatial analysis of phenotypic, genotypic, spatial and environmental data. 
+
+First, we import the snp and environmental data, and write the $δ^{13}C$ estimates into an object 'trait'. 
+
+```{r}
+snp <- read.delim(paste0(here(),"/data/WWP_SNP_genotypes.txt"), 
+                  sep = "\t", header = T)
+               
+env <- read.delim(paste0(here(),"/data/WWP_environmental_data.txt"), 
+                  sep = "\t", header = T)
+trait <- mod3_all_eff
+names(trait)[1] <- "d13c"
+```
+
+For import into an 'ecogen' object, all tables should have matching row numbers as identifiers. Here the identifier is the variable 'family', hence we use it to create new row names. For 'trait', we use function 'strsplit' to extract the variable 'family' as the first part of the existing row names (before the colon ':').
+
+```{r}
+row.names(snp) <- snp$family   
+row.names(env) <- env$family
+trait$family <- sapply(strsplit(row.names(trait),":"), 
+                              function(ls) ls[[1]])
+row.names(trait) <- trait$family
+```
+
+Now we can assign different parts of the data to different slots of the ecogen object:
+
+- XY: data frame with spatial coordinates (here: longitude, latitude)
+- P: data frame with phenotypic traits (here: d13C, family)
+- G: data frame with genotypic data (here: 164 SNPs)
+- E: data frame with environmental data (here: 7 bioclimatic etc. site variables)
+- S: data frame with structure (hierarchical sampling levels)
+
+Note: we have only one trait, but ecogen does not accept a data frame with a single column, hence we keep the variable 'family' in there.
+
+```{r}
+WWP <- ecogen(XY = env[,3:4], P = trait, G = snp[,-c(1:2)], E = env[,-c(1:4)], S = env[,1:2], order.G = FALSE)
+```
+
+We can export the 'ecogen' object 'WWP' with the function 'save', and load it again with 'load'.
+
+```{r}
+save(WWP, file = paste0(here(), "/data/WWP.RData"))
+load(paste0(here(), "/data/WWP.RData"))
+```
+
 ## 3. Estimate trait heritability
 
 **Motivation**: Now that we have learned how to estimate genetic values for $δ^{13}C$, let’s learn how to estimate what fraction of the total variation in trait values is due to genetic effects and how much of this genetic effect is due to families nested within populations and to populations. These analyses provide key information about whether or not local adaptation should even be considered. Remember that local adaptation is about genetically determined phenotypes that vary across environments in responses to differing selective pressures. This step allows us to assess how genetic variation for a phenotypic trait is distributed across the landscape.
@@ -187,6 +237,7 @@ We have generated a point estimate for $h^2$. It represents the average $h^2$ ac
 do the following using the mod_boot function in "supplemental_R_functions.R". It will takes a few moments to run the first line.
 
 ```{r}
+par(mar=c(1, 1, 1, 1))
 h2_boot_out <- mod_boot(model = mod3, nboot = 1000)
 ci_95 <- quantile(h2_boot_out, probs = c(0.025, 0.50, 0.975)) ### 95% ci.
 ci_95
@@ -220,6 +271,7 @@ phenotypic variance or the total genetic variance?
 Now, we can again look at a confidence interval using parametric bootstrapping. Again, please use the function 'mod_boot_qst' that is also located in "supplemental_R_functions.R". As before, it will take a few moments for the first line to finish.
 
 ```{r}
+par(mar=c(1, 1, 1, 1))
 qst_boot_out <- mod_boot_qst(model = mod3, nboot = 1000)
 ci_95_qst <- quantile(qst_boot_out, probs = c(0.025, 0.50, 0.975)) ### 95% ci.
 ci_95_qst
@@ -228,68 +280,87 @@ boxplot(qst_boot_out); abline(h = qst, col = "red")
 
 Interpret the results. Do you think that $Q_{ST}$ is statistically different than zero? Is this consistent with the AIC results from Part 1? Is it meaningful that the red line is less similar to the mean (or median) of the bootstrap distribution as compared to $h^2$?
 
-### c) Estimate trait correlation with environment
+## 4. Estimate trait correlation with environment
 
 The last thing we want to do in this part of the lab is to test for correlations
 between genetic values of $δ^{13}C$ and environmental data.
 
-First,we need to load the environmental and geographical data.
+### a) Correlation matrix
+
+First, we need to combine the trait, geographic and environmental data into a single data frame 'phen_env'. At the same time, we'll use the function 'scale' to scale the geographic and environmental variables, so that each has mean = 0 and a sd = 1. 
 
 ```{r}
-env <- read.delim(paste0(here(),"/data/WWP_environmental_data.txt"), 
-                  sep = "\t", header = T)
+phen_env <- data.frame(d13c=scale(WWP@P[,1]), scale(WWP@XY), scale(WWP@E))
 ```
 
-First,let’s standardize all the data. This means let’s subtract the mean and divide by the standard deviation for each geographical and environmental variable. Luckily, R has a function called scale() that will do this for us.
+Fortunately, from the way we imported the data into the 'ecogen' object (with matching row labels), we know that the data in all slots of WWP are ordered by the same variable 'family', so that their rows correspond.
+
+Create a correlation matrix.
 
 ```{r}
-env2 <- data.frame(matrix(nrow=nrow(env), ncol=ncol(env)))
-colnames(env2) <- colnames(env)
-env2[,c(1:2)] <- env[,c(1:2)]
-for(i in 3:ncol(env2)) {env2[,i] <- scale(env[,i], center = T, scale = T)}
+round(cor(phen_env), 2)
 ```
 
-Second, let’s use multiple regression to test the effect of these variables on $δ^{13}C$. Luckily, our genetic values in mod3_all_eff are in the same order as the environmental data.
+- Which site variables show the strongest correlation with the trait?
+- Which site variables are strongly correlated with each other? 
 
-First, join the data: 
+### b) Multiple regression model
+
+Next, let’s use multiple regression to test the effect of these variables on $δ^{13}C$. 
 
 ```{r}
-phen_env <- cbind(mod3_all_eff[,1], env2[,c(3:11)])
-colnames(phen_env) <- c("d13c", colnames(env2)[3:11])
 mod1_env <- lm(d13c ~ longitude + latitude + elev + max_rad + tmax_july + 
                  tmin_jan + ann_ppt + gdd_aug + AWS050, data = phen_env)
-```
-
-This model tells us the effect of all variables on $δ^{13}C$. Use 'summary' to get relevant statistics.
-
-```{r}
 summary(mod1_env)
 ```
 
-Now, let’s get the effect of climate conditioned on longitude and latitude.
+This model shows us the effect of all variables on $δ^{13}C$, given all other variables in the model. Note that the estimated slope coefficients 'Estimate', and their p-values 'Pr(>|t|)' may differ from the results of a simple regression analysis (with a single predictor in each model) due to the correlation among predictor variables.
+
+It is important to understand that these estimates and p-values are based on type II sums of squares. This means that for each predictor, they are estimated as if it was added last to the model, thus accounting for the effect of all other variables in the model.
+
+- Is this multiple regression model statistically significant? If so, why? 
+- Which variables have a statistically significant effect, given all other variables in the model?
+- Which variables provide the largest effects (use the column labeled 'Estimate', which is the partial regression coefficient)? Is this consistent with the correlation results?
+
+### c) Variation partitioning
+
+What is the relative contribution of climate vs. geography to variation in the trait $δ^{13}C$? 
+
+This can be assessed with variation partitioning, using the function 'varpart' from package 'vegan'. It takes three (or more) data frames. The first contains the response variable(s), here the trait. The others contain groups of predictors, here the bioclimatic variables and the spatial coordinates, for partitioning the explained variance in the response. We set the argument transfo="standardize" to force all variables to be standardized.
 
 ```{r}
-res_geog <- residuals(lm(d13c ~ longitude + latitude, data = phen_env))
-phen_env_mod2 <- cbind(res_geog, env2[,5:11])
-mod2_env <- lm(d13c ~ elev + max_rad + tmax_july + tmin_jan + ann_ppt + gdd_aug + AWS050, data = phen_env)
-summary(mod2_env)
+par(mar=c(1, 1, 1, 1))
+mod <- vegan::varpart(WWP@P$d13c, WWP@E, WWP@XY, transfo="standardize")
+mod
+plot(mod)
 ```
 
-This model gives the effect of climate independent of geography. Now, let’s get the effect of geography conditioned on climate.
+The result is a partition table that lists the size of different fractions of variance. Interpretation should be based on adjusted $R^2$ values. Note that negative $R^2$ values should be interpreted as zero. 
+
+The figure is a graphical representation of the fractions. Here, X1 is the set of bioclimatic variables ('climate'), and X2 is the spatial coordinates ('geography'). 
+
+Fraction [a+b] is the percent of variance in the trait that can be explained by climate. Some of this, however, might also be explained by geography. Specifically, fration [b] is the shared variance between climate and geography, and [b+c] is the percent of variance in the trait that can be explained by geography. Hence, the fraction that can only be explained by climate, but not by geography, is fraction [a]. Similarly, fraction [c] can only be explained by geography but not by climate.
+
+Looks like climate alone ([a] = 47%) explains about three times as much as geography alone ([c] = 15.5%). Together, they explain [a+b+c] = 59% of variation in the trait. Surprisingly, there was no shared variance between climate and geography (b = 0).
+
+Finally, we can test whether each component is statistically different from zero.
+
+First we fit models for all testable fractions (see last column in output above). In a way, we are now making explicit what the function 'varpart' did implicitly. We use the function 'rda' (for 'redundancy analysis') to fit a series of regression models. RDA can take multiple response variables (e.g., allele frequencies of multiple loci, or species abundances in a community), which results in multivariate regression. Here, we have a single response variable (the trait), so each model boils down to a multiple regression with one response and multiple predictor variables. 
+
+The first argument of 'rda' is the response, the second argument is the set of predictors, and the third is an optional set of predictors that should be used for conditioning (i.e., their effect is accounted for before regressing the response on the second set).
 
 ```{r}
-res_clim <- residuals(lm(d13c ~ elev + max_rad + tmax_july + tmin_jan + ann_ppt + gdd_aug + AWS050, data = phen_env))
-phen_env_mod3 <- cbind(res_clim, env2[,c(3:4)]); colnames(phen_env_mod3) <- c("d13c", "longitude", "latitude")
-mod3_env <- lm(d13c ~ longitude + latitude, data = phen_env_mod3)
-summary(mod3_env)
+ab <- anova(vegan::rda(WWP@P$d13c, WWP@E,  transfo="standardize"))
+bc <- anova(vegan::rda(WWP@P$d13c, WWP@XY, transfo="standardize"))
+abc <- anova(vegan::rda(WWP@P$d13c, data.frame(WWP@E, WWP@XY), transfo="standardize"))
+a <- anova(vegan::rda(WWP@P$d13c, WWP@E, WWP@XY, transfo="standardize"))
+b <- anova(vegan::rda(WWP@P$d13c, WWP@XY, WWP@E, transfo="standardize"))
 ```
 
-This model gives the effect of geography independent of climate.
+Now we can extract the p-values. Looks like all testable fractions are statistically significant!
 
-We can now assess the impact of climate on the genetic values of $δ^{13}C$. Consider the output from the three models. 
-
-Start with model 'mod1_env'. Is this multiple regression model statistically significant? If so, why? Which variables provide the largest effects (use the column labeled 'Estimate', which is the partial regression coefficient)? 
-
-Do the same sort of inspection for 'mod2_env' and 'mod3_env'. What can you conclude?
-
+```{r}
+c(ab=ab$"Pr(>F)"[1], bc=bc$"Pr(>F)"[1], abc=abc$"Pr(>F)"[1], 
+  a=a$"Pr(>F)"[1], b=b$"Pr(>F)"[1])
+```
 
