--- a/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
@@ -35,7 +35,6 @@ require(raster)
 require(GeNetIt)
 require(rasterVis)
 require(tmaptools) 
-require(here)
 ```
 
 ## 2. Convert 'SpatialPointsDataFrame' to 'sf' object 
@@ -78,6 +77,7 @@ Just in case you want to know how you could get your results into a GIS. This is
 The argument 'delete_dsn' specifies whether any existing file with the same name should be deleted first (i.e., overwritten). 
 
 ```{r}
+#require(here)
 #if(!dir.exists(paste0(here(),"/output"))) dir.create(paste0(here(),"/output"))
 #st_write(Sites.sf, paste0(here(),"/output/Sites.shp"), delete_dsn = TRUE)
 ```
@@ -148,4 +148,18 @@ Sites.sp <- ralu.site
 
 Map + layer(sp.points(Sites.sp, pch=16, col="yellow", cex=1.1)) +
   layer(sp.points(Sites.sp, pch=1, col="black", cex=1.1))
+```
+
+
+```{r message=FALSE, warning=TRUE, include=FALSE}
+
+detach("package:rasterVis", unload=TRUE)
+detach("package:raster", unload=TRUE)
+detach("package:sp", unload=TRUE)
+detach("package:GeNetIt", unload=TRUE)
+detach("package:sf", unload=TRUE)
+detach("package:tmaptools", unload=TRUE)
+detach("package:latticeExtra", unload=TRUE)
+detach("package:lattice", unload=TRUE)
+detach("package:RColorBrewer", unload=TRUE)
 ```
