--- a/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
@@ -54,7 +54,6 @@ require(GeNetIt)
 require(tmaptools) 
 require(SDMTools) # for landscape metrics
 require(tibble)
-require(here)
 ```
 
 ## 2. Import site data from .csv file
@@ -70,7 +69,7 @@ data(ralu.site)
 class(ralu.site)
 Sites <- data.frame(ralu.site@coords, ralu.site@data)
 class(Sites)
-tibble(Sites)
+as.tibble(Sites)
 ```
 
 To illustrate importing spatial data from Excel, here we export the data as a csv file, import it again as a data frame, then convert it to a SpatialPointsDataFrame. First we create a folder 'output' if it does not yet exist. 
@@ -80,6 +79,7 @@ Note: to run the code, remove all the hashtags '#" at the beginning of the lines
 The second line exports the data in 'Sites' as a .csv file. The third line re-imports the .csv file to re-create data frame 'Sites'.
 
 ```{r}
+#require(here)
 #if(!dir.exists(paste0(here(),"/output"))) dir.create(paste0(here(),"/output"))
 #write.csv(Sites, file=paste0(here(),"/output/ralu.site.csv"), 
 #          quote=FALSE, row.names=FALSE)
@@ -431,3 +431,11 @@ Sites.sp@data <- data.frame(Sites.sp@data, Prop.landscape,
 Done!
 
 Note: check this week's bonus material if you want to see how to use the new 'sf' library for spatial data, and how to export the site data to an shapefile that you can import into a GIS.
+
+```{r message=FALSE, warning=TRUE, include=FALSE}
+detach("package:raster", unload=TRUE)
+detach("package:sp", unload=TRUE)
+detach("package:GeNetIt", unload=TRUE)
+detach("package:tmaptools", unload=TRUE)
+detach("package:SDMTools", unload=TRUE)
+```
