--- a/vignettes/Week4_Selection/Week4_vignette.Rmd
+++ b/vignettes/Week4_Selection/Week4_vignette.Rmd
@@ -48,13 +48,12 @@ We will thus have three types of data:
 All required packages should have been installed already when you installed 'LandGenCourse'.
 
 ```{r message=FALSE, warning=TRUE}
-require(here)
 require(LandGenCourse)
 require(lme4)
-require(car)
-require(EcoGenetics)
+#require(car)
+#require(EcoGenetics)
 require(tibble)
-require(vegan)
+#require(vegan)
 
 source(system.file("extdata", "supplemental_R_functions.R", 
                             package = "LandGenCourse"))
@@ -122,12 +121,12 @@ Inspect the values in aic_out. They add to one and can be thought of as conditio
 
 Now that we have the best model, let’s use it to calculate the genetic values for each maternal tree for $δ^{13}C$. To do this, we will work directly with the mod3 output from before. What we are after is the value of $δ^{13}C$ for each tree from which we measured $δ^{13}C$ from five of her offspring in the common garden. This is the genetic value and represents the value of $δ^{13}C$ that would result if you knew all the genes and effect sizes of variation within those genes determining variation for this trait (see genetics without molecular markers!).
 
-To get the effects due to family and population, we can use the 'ranef' function from "supplemental_R_functions.R". This function produces estimates for each family and population in a list with named elements ('family' and 'population').
+To get the effects due to family and population, we can use the 'ranef' function from package 'lme4'. This function produces estimates for each family and population in a list with named elements ('family' and 'population').
 
 First, let’s get the list we need: 
 
 ```{r}
-mod3_eff <- ranef(mod3)
+mod3_eff <- lme4::ranef(mod3)
 head(mod3_eff$family)
 ```
 
@@ -199,6 +198,7 @@ WWP <- EcoGenetics::ecogen(XY = env[,3:4], P = trait, G = snp[,-c(1:2)],
 We can export the 'ecogen' object 'WWP' to a folder 'output' in your current project folder with the function 'save', and load it again with 'load'. To run the code, remove the hashtags '#' at the beginning of each line (i.e., uncomment the lines). 
 
 ```{r}
+#require(here)
 #if(!dir.exists(paste0(here(),"/output"))) dir.create(paste0(here(),"/output"))
 #save(WWP, file = paste0(here(), "/output/WWP.RData"))
 #load(paste0(here(), "/output/WWP.RData"))
@@ -361,5 +361,10 @@ Now we can extract the p-values. Looks like all testable fractions are statistic
 ```{r}
 c(ab=ab$"Pr(>F)"[1], bc=bc$"Pr(>F)"[1], abc=abc$"Pr(>F)"[1], 
   a=a$"Pr(>F)"[1], b=b$"Pr(>F)"[1])
+```
+
+```{r message=FALSE, warning=TRUE, include=FALSE}
+detach("package:lme4", unload=TRUE)
+detach("package:Matrix", unload=TRUE)
 ```
 
