--- a/vignettes/Week5_Metapopulation_Genetics/Week5_Bonus_vignette.Rmd
+++ b/vignettes/Week5_Metapopulation_Genetics/Week5_Bonus_vignette.Rmd
@@ -28,24 +28,18 @@ This worked example shows how to:
 - Correlation site-specific Fst with patch connectivity and population size
 - Test for population genetic structure with hierarchical AMOVA
 
-
 The Bonus Material provides guidance how to calculate several metrics outside of R:
 
 - Estimate population-level Fst (GESTE, FRENA)
-- Estimate effective population size (Ne) and migration rate (m) (?)
+- Estimate effective population size (Ne) and migration rate (m)
 
 ### b) Data set 
 
 Lamy et al. (2012) sampled the freshwater snail *Drepanotrema depressissimum* in a fragmented landscape of tropical ponds on the island of Guadeloupe in the French West Indies. They used a spatially and temporally stratified sampling design with a total of 25 sites, where 12 sites formed four well-separated clusters of three neighbouring sites to study spatial variability, and 12 sites spread across the island were sampled in multiple years to study temporal variability. For each site and year, 22 - 34 individuals were genotyped at ten microsatellite loci. The species is diploid, hermaphroditic, and outcrossed.  
 
-The dataset 'DD.ecogen' is included in the package 'LandGenCourse' (to load it, type: data(SS.ecogen). It contains individual-level data in the following slots:
+- **dd.ecogen**: The dataset 'dd.ecogen' with genetic data for 1270 snails from 42 populations is included in package 'LandGenCourse'. To load it, type: data(dd.ecogen). 
 
-- XY: Spatial coordinates (FORMAT?) (population-level)
-- G:  Microsatellite loci (columns = loci, rows = individual)
-- A: Table of allele frequencies (columns = alleles, rows = individual)
-- E: Ecological site variables
-- S: Hierarchical structure variables (site, cluster,  year)
-- C: Calculated genetic variables (site-level Fst, etc.)
+- **dd.site**: Population-level data from Tables 2 - 5 of Lamy et al. (2012) are available in dataset 'dd.site' (with 25 variables) in package 'LandGenCourse'. To load it, type: data(dd.site). 
 
 ### c) Required R libraries
 
@@ -62,62 +56,29 @@ require(hierfstat)
 
 ### a) Import data
 
-Genetic data (spatial: one year per site, 25 sites):
-
 ```{r}
-## Import individual-level data:
-#Snail.genind <- import2genind("./vignettes/Week5_Habitat_Connectivity/Genetic_LCBDs/Data_25pops.gen", ncode=3)
-#Snail.ecogen <- genind2ecogen(Snail.genind)
-#Snail.ecogen@S <- data.frame(pop=Snail.genind@pop)
-##Snail.gstudio <- ecogen2gstudio(Snail.ecogen, type="codominant")
-
-# Aggregate at population level:
-#Snail.genpop <- genind2genpop(Snail.genind)
-#Snail.genpop@other$Population <- row.names(Snail.genpop@tab)
-#Snail.genpop@other$Env <- read.table('./vignettes/Week5_Habitat_Connectivity/Genetic_LCBDs/env_25pops.txt', header=TRUE, row.names=1)
-#Snail.genpop@other$Table4 <- read.csv('./vignettes/Week5_Habitat_Connectivity/Lamy/Lamy_etal_MolEco2012_Table4.csv', header=TRUE)
-
-#cbind(Snail.genpop@other$Population, row.names(Snail.genpop@other$Env), 
-#      as.character(Snail.genpop@other$Table4$SiteID))
+data(dd.ecogen, package = "LandGenCourse")
+data(dd.site, package = "LandGenCourse")   
 ```
 
-Full genetic data (spatial and temporal, 42 combinations of site and year):
+## Determinants of genetic differentiation across the island (BONUS MATERIAL OR LATER LAB?)
 
+
+### d) Alternative analysis using AMOVA
+This takes a little longer!
 ```{r}
+dd.gstudio <- EcoGenetics::ecogen2gstudio(dd.ecogen)
+dd.gstudio <- dplyr::left_join(dd.gstudio, dd.site, by="SiteID")
+dd.gstudio.Spatial <- dd.gstudio[dd.gstudio$Spatial==TRUE,]
+D <- gstudio::dist_amova(dd.gstudio.Spatial)
+vegan::adonis(gstudio::dist_amova(dd.gstudio.Spatial) ~ NLT + C + SiteID, 
+              data=dd.gstudio.Spatial, permutations=499)
 
-Snail.all.gstudio <- gstudio::read_population(
-  "./vignettes/Week5_Habitat_Connectivity/Lamy/MEC_5478_sm_Data.csv", 
-  locus.columns = c(7:26), type="column")
-
-
-Snail.all.ecogen <- EcoGenetics::gstudio2ecogen(Snail.all.gstudio, ID = "INDIVIDUAL", 
-                                                lat = "North.WGS84", lon = "West.WGS84", 
-                                                struct =c("POP_code", "SITE", "YEAR"))
-
-Snail.all.genind<- ecogen2genind(Snail.all.ecogen)
-Snail.all.genind@pop <- Snail.all.genind@strata$POP_code
-
-# Import tables
-Table2 <- read.csv('./vignettes/Week5_Habitat_Connectivity/Lamy/Lamy_etal_MolEco2012_Table2.csv', header=TRUE)
-Table4 <- read.csv('./vignettes/Week5_Habitat_Connectivity/Lamy/Lamy_etal_MolEco2012_Table4.csv', header=TRUE)
-XY <- data.frame(Latitude = sapply(split(Snail.all.gstudio$North.WGS84, 
-                                         Snail.all.gstudio$POP_code), unique),
-                 Longitude = sapply(split(Snail.all.gstudio$West.WGS84, 
-                                          Snail.all.gstudio$POP_code), unique))
-XY$SiteID <- row.names(XY)
-
-# Aggregate at population level:
-Snail.all.genpop <- genind2genpop(Snail.all.genind, pop = Snail.all.genind@strata$POP_code)
-
-tmp <- dplyr::left_join(data.frame(SiteID=row.names(Snail.all.genpop@tab)), Table2)
-tmp <- dplyr::left_join(tmp, Table4[,c("POP_code", "Type", "FST.GESTE", "Size", 
-                        "V", "C", "Stab", "D", "APA", "NLT", "Fst.temp")], 
-                        by=c("SiteID" = "POP_code"))
-tmp <- dplyr::left_join(tmp, XY)
-Snail.all.genpop@other$Table2 <- tmp
 ```
 
-## Genetic differentiation
+
+
+
 
 ### Site-level differentiation: LCBD
 
